styles: press details and search

--- a/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.scss
+++ b/src/_patterns/02-components/bolt-ordered-list/src/ordered-list.scss
@@ -36,8 +36,14 @@ $bolt-ordered-list-bullet-text-color: var(--bolt-theme-heading, currentColor); /
 $bolt-ordered-list-bullet-bg-color: rgba(bolt-color(gray), 0.2);
 
 
-// Register Custom Block Element
-@include bolt-register-element('bolt-ordered-list', 'block'); /* [1] */
+// Custom element default styles
+bolt-ordered-list {
+  display: block;
+
+  &:not(:last-child) {
+    @include bolt-margin-bottom(medium);
+  }
+}
 
 
 // Styles
