feat: Add initial gumshoe functionality (BK-157)

--- a/src/_patterns/02-components/bolt-nav-bar/src/nav-bar.twig
+++ b/src/_patterns/02-components/bolt-nav-bar/src/nav-bar.twig
@@ -113,7 +113,7 @@
         {% endif %}
         <div class="c-bolt-nav-bar__nav">
           <bolt-nav-list>
-            <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }}">
+            <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }}" data-gumshoe>
               {% for item in links %}
                 <li class="c-bolt-nav-list__item">
                   <bolt-nav-link>
