--- a/src/_patterns/02-components/bolt-sticky/demo/sticky--nav-bar.twig
+++ b/src/_patterns/02-components/bolt-sticky/demo/sticky--nav-bar.twig
@@ -234,15 +234,15 @@
         },
         {
           "text": "Link",
-          "url": "#section-5"
-        },
-        {
-          "text": "Link",
           "url": "#section-6"
         },
         {
           "text": "Link",
-          "url": "#section-6"
+          "url": "#section-7"
+        },
+        {
+          "text": "Link",
+          "url": "#section-8"
         }
       ]
     } only %}
@@ -292,6 +292,35 @@
 
     {% include "@bolt/headline.twig" with {
       text: "Section 6",
+      size: "xxlarge",
+      tag: "h2"
+    } only %}
+
+    {% include "@bolt/text.twig" with {
+      text: "Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc ac egestas consequat, odio nibh euismod nulla, eget auctor orci nibh vel nisi. Aliquam erat volutpat. Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a, lacinia vel velit. Aenean facilisis nulla vitae urna tincidunt congue sed."
+    } only %}
+
+    {% include "@bolt/text.twig" with {
+      text: "Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci."
+    } only %}
+
+  {% endblock band_content %}
+{% endembed %}
+
+{% embed "@bolt/band.twig" with {
+  size: "large",
+  theme: "dark",
+  fullBleed: true,
+  attributes: {
+    id: [
+      "section-7"
+    ]
+  }
+} %}
+  {% block band_content %}
+
+    {% include "@bolt/headline.twig" with {
+      text: "Section 7",
       size: "xxlarge",
       tag: "h2"
     } only %}
