--- a/src/_patterns/04-pages/performance-tests/scenario-1-nothing.twig
+++ b/src/_patterns/04-pages/performance-tests/scenario-1-nothing.twig
@@ -1,5 +1,11 @@
 {% extends "@bolt/default-template.twig" %}
 
 {% block main_content %}
-  Pretty much nothing
+  {% for i in 1..30 %}
+    {% if loop.index is even %}
+      <div style="background-color: lightgrey; height: 100px;"></div>
+    {% else  %}
+      <div style="background-color: darkgrey; height: 100px;"></div>
+    {% endif %}
+  {% endfor %}
 {% endblock %}
