--- a/src/_patterns/04-pages/performance-tests/scenario-1-nothing.twig
+++ b/src/_patterns/04-pages/performance-tests/scenario-1-nothing.twig
@@ -1,4 +1,4 @@
-{% extends "@bolt/default-template.twig" %}
+{% extends "@bolt/vanilla-template.twig" %}
 
 {% block main_content %}
   {% for i in 1..30 %}
