Making header only tall enough to scroll

--- a/src/_patterns/04-pages/performance-tests/scenario-2-header-only.twig
+++ b/src/_patterns/04-pages/performance-tests/scenario-2-header-only.twig
@@ -5,5 +5,11 @@
 {% endblock %}
 
 {% block main_content %}
-  Just a header
+  {% for i in 1..35 %}
+    {% if loop.index is even %}
+      <div style="background-color: lightgrey; height: 100px;"></div>
+    {% else  %}
+      <div style="background-color: darkgrey; height: 100px;"></div>
+    {% endif %}
+  {% endfor %}
 {% endblock %}
