WIP: stashing changes

--- a/src/_meta/_00-head.twig
+++ b/src/_meta/_00-head.twig
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width" />
 
     <link rel="stylesheet" href="../../../styles/bolt.css?{{ cacheBuster }}" media="all" />
-    
-    
+
+
     <meta name="bolt-javascript-path"  content="/vendor/">
 
     {# Inline Critical Font-specific CSS automatically #}
@@ -22,7 +22,7 @@
     </script>
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
-    {{ patternLabHead | raw }}
+    {# patternLabHead | raw #}
     <!-- End Pattern Lab -->
 
   </head>
