--- a/src/_patterns/04-pages/d8-news/d8-press-browse--list-view.twig
+++ b/src/_patterns/04-pages/d8-news/d8-press-browse--list-view.twig
@@ -405,7 +405,7 @@
                   </div>
                 {% endcell %}
                 {% cell "u-bolt-width-6/12 u-bolt-width-4/12@medium" %}
-                  <form action="#" method="post" class="c-bolt-form">
+                  {# <form action="#" method="post" class="c-bolt-form">
                     <fieldset class="c-bolt-fieldset">
                       <div class="c-bolt-input-list">
                         <div class="c-bolt-input-list__item">
@@ -431,7 +431,7 @@
                         </div>
                       </div>
                     </fieldset>
-                  </form>
+                  </form> #}
                 {% endcell %}
               {% endgrid %}
             {% endcell %}
