--- a/src/_patterns/02-components/components-all/components-all.scss
+++ b/src/_patterns/02-components/components-all/components-all.scss
@@ -16,7 +16,7 @@
 @import '@bolt/components-device-viewer';
 @import '@bolt/components-video';
 @import '@bolt/components-figure';
-@import '@bolt/components-forms';
+@import '@bolt/components-form';
 @import '@bolt/components-headline';
 @import '@bolt/components-image';
 @import '@bolt/components-icon';
