Code syntax highlighting

--- a/apps/pattern-lab--workshop/src/_meta/_01-foot.twig
+++ b/apps/pattern-lab--workshop/src/_meta/_01-foot.twig
@@ -7,5 +7,19 @@
 
     <script src="{{ assets["bolt-global.js"] }}" async></script>
 
+    {# Code syntax highlighting - https://github.com/imsky/holder #}
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/scss.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/twig.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/holder/2.9.4/holder.min.js"></script>
+    <script>
+      Holder.run({
+        noBackgroundSize: true
+      });
+    </script>
+
   </body>
 </html>
