--- a/apps/pattern-lab--workshop/src/_patterns/02-components/ordered-list/10-ordered-list-theme-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/ordered-list/10-ordered-list-theme-variation.twig
@@ -11,7 +11,7 @@
     theme: theme,
   } %}
     {% block demo_content %}
-      {% include "@bolt/ordered-list.twig" with {
+      {% include "@bolt-components-ordered-list/ordered-list.twig" with {
         "contentItems" : [
           {
             "text": "Do not include any data or information in your posts that are confidential!"
