--- a/apps/pattern-lab--workshop/src/_patterns/02-components/ordered-list/05-ordered-list.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/ordered-list/05-ordered-list.twig
@@ -1,4 +1,4 @@
-{% include "@bolt/ordered-list.twig" with {
+{% include "@bolt-components-ordered-list/ordered-list.twig" with {
   "contentItems" : [
     {
       "text": "Do not include any data or information in your posts that are confidential!"
