Improving Schema Docs template.
Co-authored-by: Evan Lovely <evanlovely@gmail.com>

--- a/apps/pattern-lab--workshop/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/docs.twig
@@ -1,20 +1,25 @@
-{% if schema %}
-  {% include '@utils/schema-docs.twig' with schema only %}
-{% endif %}
+<div class="bolt-docs">
 
-{% if code %}
-  <h4>How to use</h4>
-  <pre><code>{{ code }}</code></pre>
-{% endif %}
+  {% if schema %}
+    <div class="bolt-docs__schema">
+      {% include '@utils/schema-docs.twig' with schema only %}
+    </div>
+  {% endif %}
 
-{% if readme %}
-  <h4>ReadMe</h4>
-  {{ readme|markdown }}
-{% endif %}
+  {% if code %}
+    <h4>How to use</h4>
+    <pre><code>{{ code }}</code></pre>
+  {% endif %}
 
-{% if links %}
-  <h4>Helpful Links</h4>
-  {% for link in links %}
-    <a href="{{ link.url }}" target="_blank">{{ link.text }}</a>
-  {% endfor %}
-{% endif %}
+  {% if readme %}
+    <h4>ReadMe</h4>
+    {{ readme|markdown }}
+  {% endif %}
+
+  {% if links %}
+    <h4>Helpful Links</h4>
+    {% for link in links %}
+      <a href="{{ link.url }}" target="_blank">{{ link.text }}</a>
+    {% endfor %}
+  {% endif %}
+</div>
