--- a/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.twig
+++ b/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.twig
@@ -15,8 +15,9 @@
 
   {# pre-render custom property values before the JS kicks in #}
   {% set attributes = attributes.setAttribute("style", [
-    "--aspect-ratio-height: " ~ aspectRatioHeight ~ ";",
-    "--aspect-ratio-width: " ~ aspectRatioWidth ~ ";"
+    "--aspect-ratio-height: " ~ 0 ~ ";",
+    "--aspect-ratio-width: " ~ 0 ~ ";",
+    "padding-bottom: " ~ (aspectRatioHeight / aspectRatioWidth * 100) ~ "%;",
   ]) %}
 {% endif %}
 
