--- a/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
@@ -52,7 +52,14 @@
                   <li>Properties:
                     <ul>
                       {% for key, property in prop.items.properties %}
-                        <li><code>{{ key }}</code></li>
+                        <li><code>{{ key }}</code>
+                          {%- if property.description %} - {{ property.description | markdown }} {% endif -%}
+                          {% if property.type %}
+                            <ul>
+                              <li>Type: <code>{{ property.type }}</code></li>
+                            </ul>
+                          {% endif %}
+                        </li>
                       {% endfor %}
                     </ul>
                   </li>
